MonetDB5/tests/BugsViaSourgeforce/Tests/ID.916699.mal
# Monet Mil to Mal compiler
# Copyright (c) 2001-2004, CWI. All rights reserved.

# Predefined code segment
#The compiler can not guarantee an accurate compilation,
#because MIL unlike MAL is a dynamically typed language.
#A few guidelines to maximize usefullness.
#- make the type of variables explicit, in particular 'nil'
#- upon advice of M2m to remap identifiers, change it in your program directly
#var a := bat(void, int,50).seqbase(0@0);
	aa_a := new(:void,:int,50);
	a := bat.setSequenceBase(aa_a,0@0);
#var i := -25;
	i := -25;
#while(i < 25) a.insert(nil, (i :+= 1));
barrier	ba_a := true;
barrier	ca_a := <(i,25);
!ERROR: ""
!        ^
! syntax error, unexpected TOK_IDENT, expecting '{'.
#Identifer 'seqbase' mapped to 'bat.setSequenceBase'
